k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratehub-frontend-service
  namespace: staging
  labels:
    app: ratehub-frontend
spec:
  type: ClusterIP
  selector:
    app: ratehub-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  sessionAffinity: None
