k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/tags: tag:staging,tag:k8s
  name: ratehubux
  namespace: ratehubux
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ratehubux
                port:
                  number: 80
            path: /
            pathType: Exact
  tls:
    - hosts:
        - ratehubux
